--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 <body>
   <!- workplace ->
   <div id="canves"></div>
-  <ul class="attributes"><li class="info"></li></ul>
+  <!-- <ul class="attributes"><li class="info"></li></ul> -->
+  <ul class="buttons"></ul>
   
   
   <!- javascript libraries ->
   <script src="libs/jquery.js"></script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="libs/raphael.js"></script>
-  <script src="libs/raphael.free_transform.js"></script>
-  <script src="js/path.js"></script>
+  <script src="libs/my_transform.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/panel.js"></script>
+  <script src="js/magnet.js"></script>
   <script src="js/anchor.js"></script>
-  <script src="js/image.js"></script>
+  <script src="js/equipment.js"></script>
   <script src="js/main.js"></script>
   
 </body>
