--- a/index.html
+++ b/index.html
@@ -8,21 +8,28 @@
 </head>
 <body>
   <!- workplace ->
-  <div id="canves"></div>
-  <!-- <ul class="attributes"><li class="info"></li></ul> -->
-  <ul class="buttons"></ul>
-  
+  <table class="info"></table>
+  <div id="canvas"></div>
   
   <!- javascript libraries ->
   <script src="libs/jquery.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="libs/raphael.js"></script>
+  <script src="libs/raphael.json.js"></script>
   <script src="libs/my_transform.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/answer.js"></script>
   <script src="js/panel.js"></script>
+  <script src="js/layer.js"></script>
   <script src="js/magnet.js"></script>
   <script src="js/anchor.js"></script>
+  <script src="js/link.js"></script>
+  <script src="js/window.js"></script>
+  <script src="js/slot.js"></script>
   <script src="js/equipment.js"></script>
+  <script src="js/pipe.js"></script>
+  <script src="js/loader.js"></script>
   <script src="js/main.js"></script>
   
 </body>
