--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="js/equipment.js"></script>
   <script src="js/pipe.js"></script>
   <script src="js/loader.js"></script>
+  <script src="js/background.js"></script>
   <script src="js/main.js"></script>
   
 </body>
