--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="libs/my_transform.js"></script>
   <script src="js/data.js"></script>
   <script src="js/answer.js"></script>
+  <script src="js/mark.js"></script>
   <script src="js/panel.js"></script>
   <script src="js/layer.js"></script>
   <script src="js/magnet.js"></script>
