--- a/pages/excavator.html
+++ b/pages/excavator.html
@@ -144,7 +144,7 @@
       <div class="jumbotron">
         <h1>Backhoe Excavator</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a id="start_quiz" class="btn btn-lg btn-success" href="../" target="_blank">Start Assignment</a></p>
+        <p><a class="btn btn-lg btn-success" href="../index.html" target="_blank">Start Assignment</a></p>
       </div>
 
       <!-- Example row of columns -->
@@ -264,6 +264,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../libs/jquery.js"></script>
     <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../js/intro.js"></script>
+    <script src="../js/pages/intro.js"></script>
   </body>
 </html>
