--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -109,8 +109,8 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Demo</a></li>
                 <li><a href="#">Tutorials</a></li>
-                <li><a href="#">References</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Useful Sketching</a></li>
+                <li><a href="#">About the Authors</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
@@ -121,7 +121,9 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>Online Quiz</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p class="lead">At the outset of the quiz you will be given a randomly selected scenario and sketching objects that may or may not need to complete the selected engineering sketch.  The final sketch has to fit within the given space and including minimal margins.</p>
+        <p class="lead">You will be able to create copies of each element given in the start-up menu.  If you end up with copied elements that you can’t use, marks will be taken off.  Connections between related elements have to be made appropriately with proper orientations and boundary conditions.  All elements have to be scaled within a +/- 15% allowable threshold while the final equipment has to be able to perform the base task (e.g. backhoe excavator has to be able to reach the bottom of the trench.)</p>
+        <p class="lead">After you are finished with your sketch, hit SUBMIT button.  You will get a final score immediately and the correct solution after everybody submitted  the quiz.</p>
         <a id="start" class="btn btn-large btn-success" href="#">Choose Equipment</a>
       </div>
 
@@ -130,19 +132,19 @@
       <!-- Example row of columns -->
       <div class="row-fluid">
         <div class="span4">
-          <h2>Feature 1</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Trench Excavation with Side Deposit of Soil</h2>
+          <p>The objective of this quiz is to assert if you understand the basic process of excavating a trench using a backhoe excavator.  You will be given a trenching scenario and elements of a backhoe that you need to sketch into a functional piece of equipment able to perform  all the necessary motions and tasks.</p>
+          <p><a class="btn" href="#">Start Quiz &raquo;</a></p>
         </div>
         <div class="span4">
-          <h2>Feature 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
+          <h2>Excavation with Soil Removal by Truck</h2>
+          <p>Instead of dumping the excavated soil next to a trench excavated by a backhoe, this quiz will require you to sketch a solution where the soil is being removed from the site. The equipment has to be appropriately positioned and scaled into a functional set able to perform  all the necessary motions and tasks efficiently. Click QUIZ 2 to start.</p>
+          <p><a class="btn" href="#">Start Quiz &raquo;</a></p>
+        </div>
         <div class="span4">
-          <h2>Feature 3</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Laying of Concrete Pipe into Trench</h2>
+          <p>This Quiz assumes that one section of a trench has been prepared to receive the next pipe section. A carrier has already moved the pipe elements within the reach of the backhoe arm.  However, you need to select a safe rigging method allowing the backhoe to lower and laying the pipe element.  Everything has to be appropriately positioned and scaled to perform  all the necessary motions and tasks. Click QUIZ 3 to start.</p>
+          <p><a class="btn" href="#">Start Quiz &raquo;</a></p>
         </div>
       </div>
 
