--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Marking</h4>
+          <h4 class="modal-title">Marking Sheet</h4>
         </div>
         <div class="modal-body">
-          <p>One fine body&hellip;</p>
+          <table class="mark table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Check Points</th>
+                <th>Join</th>
+                <th>Angle</th>
+                <th>Scale</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -45,6 +57,7 @@
   <script src="js/magnet.js"></script>
   <script src="js/anchor.js"></script>
   <script src="js/link.js"></script>
+  <script src="js/line.js"></script>
   <script src="js/window.js"></script>
   <script src="js/slot.js"></script>
   <script src="js/component.js"></script>
