--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="libs/raphael.js"></script>
   <script src="libs/raphael.json.js"></script>
   <script src="libs/my_transform.js"></script>
+  <!-- <script src="libs/free_transform.js"></script> -->
   <script src="js/data.js"></script>
   <script src="js/answer.js"></script>
   <script src="js/mark.js"></script>
